dynamic routes for projects

--- a/todo.txt
+++ b/todo.txt
@@ -4,3 +4,7 @@
 --динамические проекты
 анимации
 --кнопки обратный звонок в шапке и в моб меню
+переход на другой проект
+команда плитки переделать
+заявки обрабатывтаь + модель на бэке
+валидация телеофна
