--- a/todo.txt
+++ b/todo.txt
@@ -2,9 +2,8 @@
 --форма в подвале
 --открытие мобменю
 --динамические проекты
-анимации
 --кнопки обратный звонок в шапке и в моб меню
-переход на другой проект
+--переход на другой проект
 команда плитки переделать
-заявки обрабатывтаь + модель на бэке
-валидация телеофна
+--заявки обрабатывать + модель на бэке
+--валидация телефона
